<resources>

    <string name="app_name">PSPKV</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pagrindinis</string>
	<string name="test1">Pirmo testo klausimai</string>
    <string name="test2">Antro testo klausimai</string>
    <string name="test3">Trečio testo klausimai</string>
    <string name="test4">Ketvirto testo klausimai</string>
    <string name="test_all">Visi klausimai</string>
    <string name="title_activity_questions">Klausimai</string>
    <string name="why">Kodėl?</string>
    <string name="next">Kitas</string>

</resources>